0023069: Cache GL_FEEDBACK mode per frame in TKOpenGl calls